--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@/components/*": ["components/*"]
+      "@/*": ["./src/*"]
+      // "@/components/*": ["/components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
