--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         node-version: '20.x'
     - name : Run NPM
-      run: npm ci
+      run: npm install
     - name : Run build
       run: npm run build --if-present
     - name : restart PM2
