--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,8 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
+    - name : git pull
+      run : git pull
     - name : Run NPM
       run: npm install
     - name : Run build
