--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.1",
+    "html-react-parser": "^5.1.16",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.418.0",
     "next": "14.2.5",
