--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.3",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
