--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.418.0",
     "next": "14.2.5",
+    "quill": "2.0.2",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "recharts": "^2.12.7",
     "sweetalert2": "^11.14.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
