--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.2.1",
     "html-react-parser": "^5.1.16",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.418.0",
@@ -53,6 +52,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "embla-carousel": "^8.3.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-jest-dom": "^5.4.0",
