--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/aos": "^3.0.7",
     "@types/dompurify": "^3.0.5",
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "aos": "^2.3.4",
     "dompurify": "^3.1.7",
     "embla-carousel": "^8.3.0",
     "embla-carousel-auto-scroll": "^8.3.0",
