--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "14.2.5",
     "quill": "2.0.2",
     "react": "^18",
+    "react-datepicker": "^7.4.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
